--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
         "webpack-dev-server": "^2.7.1",
         "webpack-merge": "^4.1.0",
         "webpack-notifier": "^1.5.0"
+    },
+    "dependencies": {
+        "firebase": "^4.4.0"
     }
 }
